Fix scrollbars in chrome

--- a/src/Play/Clue/clue.scss
+++ b/src/Play/Clue/clue.scss
@@ -6,7 +6,7 @@
     font-size: sizes.$text-md;
 
     text-align: center;
-    grid-template-rows: repeat(2, 1fr) repeat(2, 3fr);
+    grid-template-rows: repeat(2, 1fr) repeat(2, 4fr);
     align-items: center;
 
     height: fit-content;
